added endpoint to delete loan records

--- a/app/templates/accounts_receivable/index.html
+++ b/app/templates/accounts_receivable/index.html
@@ -173,7 +173,7 @@
                                 >
                                 Edit
                                 </button>
-                                <a href="#" class="btn btn-danger">Delete</a>
+                                <a href="{{ url_for('accounts_receivable.delete_loan', loan_id=loan.id) }}" class="btn btn-danger">Delete</a>
                             </div>
                         </td>
                     </tr>
