button for making payments to loans

--- a/app/templates/accounts_receivable/index.html
+++ b/app/templates/accounts_receivable/index.html
@@ -156,6 +156,7 @@
                         <td>{{ loan.created_at }}</td>
                         <td>
                             <div class="d-flex gap-2">
+                                <a href="#" class="btn btn-outline-light">Pay</a>
                                 <button 
                                     type="button" 
                                     class="btn btn-success" 
