--- a/app/templates/accounts_receivable/index.html
+++ b/app/templates/accounts_receivable/index.html
@@ -124,6 +124,52 @@
                 </div>
             </form>
         </section>
+        <section class="modal fade" tabindex="-1" id="pay-account-receivable">
+            <form id="pay-account-receivable-form">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">New Income</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="row">
+                                <div class="col-sm">
+                                    <div class="form-floating mt-2">
+                                        <input type="text" name="amount" id="p-amount-id" class="form-control"
+                                            placeholder="Amount" required>
+                                        <label for="amount-id">Amount</label>
+                                    </div>
+                                </div>
+                                <div class="col-sm">
+                                    <div class="form-check form-switch mt-2">
+                                        <input class="form-check-input" type="checkbox" name="is-cash" id="p-is-cash-id" switch checked>
+                                        <label class="form-check-label" for="checkNativeSwitch">
+                                            Cash
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="form-floating mt-2">
+                                    <select name="select-bank-account" id="p-select-bank-account-id" class="form-select">
+                                        <option value="none">...Select...</option>
+                                        {% for ba in bank_accounts %}
+                                        <option value="{{ ba.id }}">{{ ba.nick_name }}</option>                                        
+                                        {% endfor %}
+                                    </select>
+                                    <label for="e-select-bank-account-id" class="p-3">Bank Account</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary" onclick="createIncome()">Save</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </section>
         <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#create-account-receivable">New Account Receivable</button>
         <div class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 457px;">
             <table class="table table-striped  table-hover">
@@ -156,7 +202,16 @@
                         <td>{{ loan.created_at }}</td>
                         <td>
                             <div class="d-flex gap-2">
-                                <a href="#" class="btn btn-outline-light">Pay</a>
+                                <button 
+                                    id=""
+                                    type="button"
+                                    data-bs-toggle="modal" 
+                                    data-bs-target="#pay-account-receivable"
+                                    class="btn btn-outline-light" 
+                                    data-loan-id="{{ loan.id }}"
+                                >
+                                Pay
+                                </button>
                                 <button 
                                     type="button" 
                                     class="btn btn-success" 
@@ -182,6 +237,7 @@
         </div>
     </div>
     <input type="hidden" value="{{ url_for('accounts_receivable.create_loan') }}" id="createEndPoint">
+    <input type="hidden" value="{{ url_for('accounts_receivable.create_loan') }}" id="makePaymentEndPoint">
 <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="{{ url_for('static', filename='scripts/utils/utils.js' ) }}"></script>
@@ -190,6 +246,7 @@
     document.addEventListener('DOMContentLoaded', () => {
         const createAccountReceivableModal = document.getElementById('create-account-receivable');
         const editAccountReceivableModal = document.getElementById('edit-account-receivable');
+        const payAccountReceivableModal = document.getElementById('pay-account-receivable');
 
         function toggleBankAccount(checkbox, select){
             if(checkbox.checked) {
@@ -251,6 +308,14 @@
                 selectBankAccountOption(editIsCash, editBankAccountsSelect, event);
             });
 
+        });
+        
+        payAccountReceivableModal.addEventListener('show.bs.modal', () => {
+            const isCash = document.getElementById('p-is-cash-id');
+            const bankAccountsSelect = document.getElementById('p-select-bank-account-id');
+
+            toggleBankAccount(isCash, bankAccountsSelect);
+            isCash.addEventListener('change', () => toggleBankAccount(isCash, bankAccountsSelect));
         });
     })
 </script>
@@ -325,6 +390,40 @@
             });
         }
     }
-</script>
 
+    async function makePayment(){
+        const createEndPoint = document.getElementById('makePaymentEndPoint').value;
+        const form = document.getElementById('pay-account-receivable-form');
+        const formData = new FormData(form);
+
+        try {
+            const response = await fetch(createEndPoint, {
+                method: 'POST',
+                body: formData
+            });
+
+            const data = await response.json();
+
+            if(!response.ok){
+                console.log(response.json());
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Error',
+                    text: data.error || 'Something went wrong while creating the income.'
+                });
+                return;
+            }
+            location.reload();//Reload the current page to see the new added income
+        
+        } catch (error) {
+            console.error('Fetch error:', error);
+
+            Swal.fire({
+            icon: 'error',
+            title: 'Network Error',
+            text: error.message || 'Could not connect to server.'
+            });
+        }
+    }
+</script>
 {% endblock %}
