--- a/app/templates/accounts_receivable/index.html
+++ b/app/templates/accounts_receivable/index.html
@@ -126,10 +126,11 @@
         </section>
         <section class="modal fade" tabindex="-1" id="pay-account-receivable">
             <form id="pay-account-receivable-form">
+                <input type="hidden" name="loan-id" id="p-loan-id">
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title">New Income</h5>
+                            <h5 class="modal-title">Make a payment</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
@@ -164,7 +165,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary" onclick="createIncome()">Save</button>
+                            <button type="button" class="btn btn-primary" onclick="makePayment()">Save</button>
                         </div>
                     </div>
                 </div>
@@ -179,10 +180,10 @@
                     <th scope="col">Name</th>
                     <th scope="col">Amount</th>
                     <th scope="col">Remaining</th>
+                    <th scope="col">Status</th>
+                    <th scope="col">Description</th>
                     <th scope="col">Is Cash</th>
                     <th scope="col">Bank Account</th>
-                    <th scope="col">Description</th>
-                    <th scope="col">Status</th>
                     <th scope="col">Create at</th>
                     <th scope="col">Acctions</th>
                     </tr>
@@ -194,11 +195,11 @@
                         <th scope="row">{{ loan.id }}</th>
                         <td>{{ loan.person_name }}</td>
                         <td>{{ loan.amount }}</td>
-                        <td> - </td>
-                        <td>{{ loan.is_cash }}</td>
-                        <td>{{ loan.bank_account.nick_name }}</td>
+                        <td> {{ loan.remaining_amount() }} </td>
+                        <td>{{ 'Active' if loan.is_active else 'Paid'  }}</td>
                         <td>{{ loan.description }}</td>
-                        <td>{{ loan.is_active }}</td>
+                        <td>{{ 'Yes' if loan.is_cash else 'No'  }}</td>
+                        <td>{{ loan.bank_account.nick_name }}</td>
                         <td>{{ loan.created_at }}</td>
                         <td>
                             <div class="d-flex gap-2">
@@ -237,7 +238,7 @@
         </div>
     </div>
     <input type="hidden" value="{{ url_for('accounts_receivable.create_loan') }}" id="createEndPoint">
-    <input type="hidden" value="{{ url_for('accounts_receivable.create_loan') }}" id="makePaymentEndPoint">
+    <input type="hidden" value="{{ url_for('accounts_receivable.create_loan_payment') }}" id="makePaymentEndPoint">
 <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="{{ url_for('static', filename='scripts/utils/utils.js' ) }}"></script>
@@ -275,6 +276,7 @@
             toggleBankAccount(isCash, bankAccountsSelect);
             isCash.addEventListener('change', () => toggleBankAccount(isCash, bankAccountsSelect));
         });
+        
         editAccountReceivableModal.addEventListener('show.bs.modal', (event) => {
             const button = event.relatedTarget;
             const btnSubmitEdition = document.getElementById('btn-submit-edition');
@@ -310,7 +312,10 @@
 
         });
         
-        payAccountReceivableModal.addEventListener('show.bs.modal', () => {
+        payAccountReceivableModal.addEventListener('show.bs.modal', (event) => {
+            const button = event.relatedTarget;
+            const loanId = button.getAttribute('data-loan-id');
+            document.getElementById('p-loan-id').value = loanId; //Set the loan id to the hidden input so backend can process it as part of the form
             const isCash = document.getElementById('p-is-cash-id');
             const bankAccountsSelect = document.getElementById('p-select-bank-account-id');
 
@@ -393,6 +398,7 @@
 
     async function makePayment(){
         const createEndPoint = document.getElementById('makePaymentEndPoint').value;
+
         const form = document.getElementById('pay-account-receivable-form');
         const formData = new FormData(form);
 
@@ -403,6 +409,7 @@
             });
 
             const data = await response.json();
+            console.log(data);
 
             if(!response.ok){
                 console.log(response.json());
@@ -413,6 +420,16 @@
                 });
                 return;
             }
+
+            if(data.is_paid === true){
+                console.log(data);
+                Swal.fire({
+                    icon: 'success',
+                    title: data.message || 'The loan has been fully paid.'
+                });
+                return;
+            }
+
             location.reload();//Reload the current page to see the new added income
         
         } catch (error) {
