--- a/app/templates/accounts_receivable/associated_records.html
+++ b/app/templates/accounts_receivable/associated_records.html
@@ -5,31 +5,27 @@
 {% endblock %}
 
 {% block content %}
-    <h3>Loan Associated records</h3>
-    <h4 class="mt-2">Expenses</h4>
+    <h3>Loan #{{ loan.id }} at {{ loan.created_at }}</h3>
+    <h4 class="mt-2">Payments</h4>
     <div id="expenses-table-container" class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 300px;">
                 <table class="table table-striped table-hover" id="expenses-table">
             <thead class="sticky-top">
                 <tr>
                     <th scope="col"># Id</th>
                     <th scope="col">Amount</th>
-                    <th scope="col">Description</th>
-                    <th scope="col">Credit Card</th>
+                    <th scope="col">is_cash</th>
                     <th scope="col">Bank Account</th>
-                    <th scope="col">Category</th>
                     <th scope="col">Create at</th>
                 </tr>
             </thead>
             <tbody id="expenses-table-body">
-                {% for expense in expenses %}                
+                {% for payment in loan.loan_payments %}                
                 <tr>
-                    <th scope="row">{{ expense.id }}</th>
-                    <td>{{ expense.amount }}</td>
-                    <td> {{ expense.description or '-' }} </td>
-                    <td>{{ expense.credit_card.nick_name or '-' }}</td>
-                    <td>{{ expense.bank_account.nick_name }}</td>
-                    <td>{{ expense.expense_category.name }}</td>
-                    <td>{{ expense.created_at }}</td>
+                    <th scope="row">{{ payment.id }}</th>
+                    <td>{{ payment.amount }}</td>
+                    <td>{{ payment.is_cash }}</td>
+                    <td>{{ payment.bank_account.nick_name }}</td>
+                    <td>{{ payment.created_at }}</td>
                 </tr>
                 {% endfor %}
                 
