--- a/app/templates/accounts_receivable/index.html
+++ b/app/templates/accounts_receivable/index.html
@@ -417,7 +417,7 @@
                 Swal.fire({
                     icon: 'error',
                     title: 'Error',
-                    text: data.error || 'Something went wrong while creating the income.'
+                    text: data.error || 'Something went wrong while creating the loan.'
                 });
                 return;
             }
