--- a/app/templates/expenses/index.html
+++ b/app/templates/expenses/index.html
@@ -173,7 +173,7 @@
                 <input type="text" id="start-date-id" class="form-control w-100">
             </div>
             <div>
-                <button type="button" class="btn btn-outline-light" id="btn-search-by-timeframe-id">search</button>
+                <button type="button" class="btn btn-outline-light" id="btn-search-by-timeframe-id"><i class="bi bi-search"></i></button>
             </div>
         </div>
     </div>
@@ -248,6 +248,7 @@
         </div>
     </section>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script type="module" src="{{ url_for('static', filename='scripts/expenses/filteringByTime.js') }}"></script>
