--- a/app/templates/accounts_receivable/index.html
+++ b/app/templates/accounts_receivable/index.html
@@ -172,7 +172,7 @@
             </form>
         </section>
 
-        <div class="d-flex justify-content-start gap-2 flex-wrap flex-md-nowrap">
+        <div class="d-flex justify-content-start gap-1 flex-wrap flex-md-nowrap">
             <button type="button" 
                     class="btn btn-outline-primary me-auto me-md-auto w-100 w-md-auto" 
                     style="max-width: 200px;"
@@ -180,19 +180,23 @@
                     data-bs-target="#create-account-receivable">
                 New Account Receivable
             </button>
-
-            <div class="w-100 w-md-auto mt-md-0" style="max-width: 350px;">
-                <select class="form-select">
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                </select>
+            <div class="d-flex gap-1 w-100 align-items-center" style="max-width: 320px;">
+                <div class="w-md-auto mt-md-0">
+                    <label for="" class="fs-6 fw-bold">Filter by: </label>
+                </div>
+                <div class="w-100 w-md-auto mt-md-0" style="max-width: 250px;">
+                    <select class="form-select" id="select-filter-type-id">
+                        <option value="field">Field</option>
+                        <option value="time">Time</option>
+                    </select>
+                </div>
             </div>
 
             <div class="d-flex gap-1 w-100" style="max-width: 350px;">
                 <div class="w-100 w-md-auto mt-md-0">
-                    <input type="text" class="form-control" id="exampleFormControlInput1">
+                    <input type="text" class="form-control" id="filter-input-id">
                 </div>
-                <button type="button" class="btn btn-outline-success">Q</button>
+                <button type="button" class="btn btn-outline-success" id="btn-search-id"><i class="bi bi-search"></i></button>
             </div>
         </div>
 
@@ -213,16 +217,16 @@
                     </tr>
                 </thead>
                 
-                <tbody>
+                <tbody id="loans-table-body-id">
                   {% for loan in loans %}
                     <tr class="loan-row" data-loan-id="{{ loan.id }}" data-url-associated-records = "{{ url_for('accounts_receivable.associated_records', loan_id=loan.id) }}">
                         <th scope="row">{{ loan.id }}</th>
                         <td>{{ loan.person_name }}</td>
                         <td>{{ loan.amount }}</td>
                         <td> {{ loan.remaining_amount() }} </td>
-                        <td>{{ 'Active' if loan.is_active else 'Paid'  }}</td>
+                        <td>{{ 'ACTIVE' if loan.is_active else 'PAID'  }}</td>
                         <td>{{ loan.description }}</td>
-                        <td>{{ 'Yes' if loan.is_cash else 'No'  }}</td>
+                        <td>{{ 'YES' if loan.is_cash else 'NO'  }}</td>
                         <td>{{ loan.bank_account.nick_name }}</td>
                         <td>{{ loan.created_at }}</td>
                         <td>
@@ -263,10 +267,14 @@
     </div>
     <input type="hidden" value="{{ url_for('accounts_receivable.create_loan') }}" id="createEndPoint">
     <input type="hidden" value="{{ url_for('accounts_receivable.create_loan_payment') }}" id="makePaymentEndPoint">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="{{ url_for('static', filename='scripts/utils/utils.js' ) }}"></script>
 <script src="{{ url_for('static', filename='scripts/accounts_receivable/script.js') }}"></script>
+<script src="{{ url_for('static', filename='scripts/accounts_receivable/filterByTime.js') }}"></script>
 
 <script> 
     document.addEventListener('DOMContentLoaded', () => {
