--- a/app/templates/expenses/index.html
+++ b/app/templates/expenses/index.html
@@ -161,8 +161,14 @@
 
     <div class="d-flex gap-1 align-items-end">
         <div class="me-auto">
-            <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#create-expense"
-            id="btn-create-expense-id">New Expense</button>
+            <button 
+                type="button" 
+                class="btn btn-outline-primary" 
+                data-bs-toggle="modal" 
+                data-bs-target="#create-expense"
+                id="btn-create-expense-id"
+            >New expense
+            </button>
         </div>
 
         <div class="d-flex gap-1 align-items-end w-75 justify-content-end">
@@ -175,6 +181,35 @@
             <div>
                 <button type="button" class="btn btn-outline-light" id="btn-search-by-timeframe-id"><i class="bi bi-search"></i></button>
             </div>
+        </div>
+    </div>
+
+    <div class="d-flex justify-content-start gap-1 flex-wrap flex-md-nowrap mt-2">
+        <button 
+            type="button"
+            id="btn-create-expense-id"
+            class="btn btn-outline-primary me-auto me-md-auto w-100 w-md-auto" 
+            style="max-width: 200px;"
+            data-bs-toggle="modal"
+            data-bs-target="#create-expense"
+        >New expense
+        </button>
+        <div class="d-flex gap-1 w-100 align-items-center" style="max-width: 320px;">
+            <div class="w-md-auto mt-md-0">
+                <label for="" class="fs-6 fw-bold">Filter by: </label>
+            </div>
+            <div class="w-100 w-md-auto mt-md-0" style="max-width: 250px;">
+                <select class="form-select" id="select-filter-type-id">
+                    <option value="field">Field</option>
+                    <option value="time">Time</option>
+                </select>
+            </div>
+        </div>
+        <div class="d-flex gap-1 w-100" style="max-width: 350px;">
+            <div class="w-100 w-md-auto mt-md-0">
+                <input type="text" class="form-control" id="filter-input-id">
+            </div>
+            <button type="button" class="btn btn-outline-success" id="btn-search-id"><i class="bi bi-search"></i></button>
         </div>
     </div>
 
