--- a/app/templates/accounts_receivable/associated_records.html
+++ b/app/templates/accounts_receivable/associated_records.html
@@ -6,6 +6,8 @@
 
 {% block content %}
     <h3>Loan #{{ loan.id }} at {{ loan.created_at }}</h3>
+    <h4 class="mt-2">Payments</h4>
+    <a href="{{ url_for('accounts_receivable.index') }}" class="btn btn-light fs-6"><i class="bi bi-arrow-return-left"></i> Go back</a>
     <section class="modal fade" tabindex="-1" id="edit-loan-payment">
         <form id="edit-loan-payment-form">
             <input type="hidden" name="loan-id" id="p-loan-id">
@@ -54,7 +56,7 @@
             </div>
         </form>
     </section>
-    <h4 class="mt-2">Payments</h4>
+    
     <div id="expenses-table-container" class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 300px;">
                 <table class="table table-striped table-hover" id="expenses-table">
             <thead class="sticky-top">
