--- a/app/templates/bank_accounts/associated_records.html
+++ b/app/templates/bank_accounts/associated_records.html
@@ -7,6 +7,7 @@
 {% block content %}
     <h3>{{ data.bank_account.nick_name }}</h3>
     <h4 class="mt-2">Expenses</h4>
+    <a href="{{ url_for('bank_account.index') }}" class="btn btn-light fs-6"><i class="bi bi-arrow-return-left"></i> Go back</a>
     <div id="expenses-table-container" class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 300px;">
                 <table class="table table-striped table-hover" id="expenses-table">
             <thead class="sticky-top">
