--- a/app/templates/expense_categories/associated_records.html
+++ b/app/templates/expense_categories/associated_records.html
@@ -7,6 +7,7 @@
 {% block content %}
     <h3>{{ data.category.name }}</h3>
     <h4 class="mt-2">Expenses</h4>
+    <a href="{{ url_for('expense_category.index') }}" class="btn btn-light fs-6"><i class="bi bi-arrow-return-left"></i> Go back</a>
     <div id="expenses-table-container" class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 300px;">
                 <table class="table table-striped table-hover" id="expenses-table">
             <thead class="sticky-top">
@@ -37,5 +38,4 @@
         </table>
     </div>
     <p class="">Total: {{ data.total_expenses }}</p>
-
 {% endblock %}
