new class for table rows

--- a/app/templates/credit_cards/index.html
+++ b/app/templates/credit_cards/index.html
@@ -112,7 +112,7 @@
         </form>
     </section>
     <section class="modal fade" tabindex="-1" id="pay-credit-card">
-        <form id="pay-account-receivable-form">
+        <form id="pay-credit-card-form">
             <input type="hidden" name="credit-card-id" id="p-credit-card-id">
             <div class="modal-dialog">
                 <div class="modal-content">
