--- a/app/templates/credit_cards/index.html
+++ b/app/templates/credit_cards/index.html
@@ -122,19 +122,11 @@
                     </div>
                     <div class="modal-body">
                         <div class="row">
-                            <div class="col-sm">
+                            <div class="">
                                 <div class="form-floating mt-2">
                                     <input type="text" name="amount" id="p-amount-id" class="form-control"
                                         placeholder="Amount" required>
                                     <label for="amount-id">Amount</label>
-                                </div>
-                            </div>
-                            <div class="col-sm">
-                                <div class="form-check form-switch mt-2">
-                                    <input class="form-check-input" type="checkbox" name="is-cash" id="p-is-cash-id" switch checked>
-                                    <label class="form-check-label" for="checkNativeSwitch">
-                                        Cash
-                                    </label>
                                 </div>
                             </div>
                         </div>
@@ -152,7 +144,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary" onclick="makePayment()">Save</button>
+                        <button type="button" class="btn btn-primary" id="btn-credit-card-payment">Save</button>
                     </div>
                 </div>
             </div>
@@ -193,7 +185,7 @@
                             data-bs-toggle="modal" 
                             data-bs-target="#pay-credit-card"
                             class="btn btn-outline-light" 
-                            data-loan-id=""
+                            data-credit-card-id="{{ credit_card.id }}"
                         >
                         Pay
                         </button>
@@ -228,15 +220,6 @@
             const editCreditCardModal = document.getElementById('edit-credit-card');
             const payCreditCardModal = document.getElementById('pay-credit-card');
 
-            function toggleBankAccount(checkbox, select){
-                if(checkbox.checked) {
-                    select.disabled = checkbox.checked;
-                    select.value = "none";
-                } else {
-                    select.disabled = checkbox.checked;
-                }
-            }
-
             editCreditCardModal.addEventListener('show.bs.modal', function(event) {
                 const button = event.relatedTarget;
 
@@ -256,9 +239,8 @@
 
             payCreditCardModal.addEventListener('show.bs.modal', (event) => {
                 const button = event.relatedTarget;
-                const loanId = button.getAttribute('data-loan-id');
-                //document.getElementById('p-loan-id').value = loanId; //Set the loan id to the hidden input so backend can process it as part of the form
-                const isCash = document.getElementById('p-is-cash-id');
+                const creditCardId = button.getAttribute('data-credit-card-id');
+                document.getElementById('p-credit-card-id').value = creditCardId; //Set the loan id to the hidden input so backend can process it as part of the form
                 const bankAccountsSelect = document.getElementById('p-select-bank-account-id');
 
                 toggleBankAccount(isCash, bankAccountsSelect);
