added link to go to withdrawal's module

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -40,6 +40,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('accounts_receivable.index' ) }}">Accounts Receivable</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('withdrawal.index' ) }}">Withdrawals</a>
+                    </li>
                 </ul>
             </div>
         </div>
