--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -43,6 +43,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('withdrawal.index' ) }}">Withdrawals</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('cashledger.index' ) }}">Cash</a>
+                    </li>
                 </ul>
             </div>
         </div>
