--- a/app/templates/expense_categories/index.html
+++ b/app/templates/expense_categories/index.html
@@ -56,7 +56,7 @@
         </section>
         <div class="row">
             <div class="col-sm">
-                <div class="row" style="height: 200px;">
+                <div class="row">
                     <div class="d-flex justify-content-center">
                         <h4>Monthly Basis</h4>
                     </div>
