--- a/app/templates/cashledger/index.html
+++ b/app/templates/cashledger/index.html
@@ -43,7 +43,7 @@
                     <tr>
                         <th scope="row">{{ ledger.id }}</th>
                         <td>{{ ledger.reference_code }}</td>
-                        <td>{{ ledger.type.replace('_', ' ').capitalize() }}</td>
+                        <td>{{ ledger.type }}</td>
                         <td>{{ ledger.amount }}</td>
                         <td>{{ ledger.created_at }}</td>
                     </tr>
