new appereace for chart and table

--- a/app/templates/expense_categories/index.html
+++ b/app/templates/expense_categories/index.html
@@ -3,7 +3,7 @@
 {% block title %}Expense Categories{% endblock %}
 
 {% block content %}
-    <div class="container w-100">
+    <div class="w-100">
         <h2>Expense Categories</h2>
         <section class="modal fade" tabindex="-1" id="create-expense-category">
             <form action="{{ url_for('expense_category.create' ) }}" method="post">
@@ -55,17 +55,17 @@
             </form>
         </section>
         <div class="row">
-            <div class="col-sm">
-                <div class="row">
+            <div class="col-sm border rounded-3">
+                <div class="row mt-2" style="height: 400px;">
                     <div class="d-flex justify-content-center">
-                        <h4>Monthly Basis</h4>
+                        <h5>Monthly Basis</h5>
                     </div>
                     <div class=" p-4">
                         <canvas id="totals-per-category"></canvas>
                     </div>
                 </div>
             </div>
-            <div class="col-sm">
+            <div class="col-sm mt-2">
                 <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#create-expense-category">New Expense Category</button>
                 <div class="table-responsive overflow-y-auto border rounded-3 mt-1" style="max-height: 457px;">
                     <table class="table table-striped  table-hover">
